--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.redis.database=0
-spring.redis.host=localhost
-spring.redis.port=6379
+# private IP in huawei cloud.
+spring.redis.cluster.nodes=10.148.0.89:6379, 10.148.0.89:6380, 10.148.0.89:6381, 10.148.0.89:6382, 10.148.0.89:6383, 10.148.0.89:6384
+#spring.redis.password=Ssp^F#c#7hz8#&L9
+spring.redis.cluster.max-redirects=1
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.min-idle=3
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.ssl=false
